--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="CTLanding_form">
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
@@ -10,7 +11,9 @@
       </ul>
     </div>
   <% end %>
-
+  
+  <fieldset>
+  <legend>Enter User Details</legend>
   <div class="field">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
@@ -26,4 +29,8 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+
+  </fieldset>
+
 <% end %>
+</div>
