--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Test Landing Page</h1>
 
 <p><%= link_to "Clickety Ticket Landing", ct_CTLanding_path %></p>
+<p><%= link_to "Clickety Ticket Main", ct_CTMain_path %></p>
 <p><%= link_to "Users", users_path %></p>
