Update ct_main css

--- a/app/views/ct/CTMain.html.erb
+++ b/app/views/ct/CTMain.html.erb
@@ -7,7 +7,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<script src="jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="mainScript.js"></script>
-	<link href="css/mainStyles.css" rel="stylesheet">
+	<link href="ct_main.css" rel="stylesheet">
 </head>
 
 <body>
